# simple-C-parser

./: .gitignore  CMakeLists.txt  Readme.md  ast.cpp  ast.h  astnodes.cpp  astnodes.h  main.cpp  parser.cpp  parser.h  tokenizator.cpp  tokenizator.h
apps/: CMakeLists.txt  main.cpp
cmake/: LoadCLI.cmake  LoadCatch2.cmake
include/libparser/: ast.hpp  astnodes.hpp  base_astnode.hpp  context.hpp  parser.hpp  tokenizator.hpp
libparser/: CMakeLists.txt  ast.cpp  ast.hpp  astnodes.cpp  astnodes.hpp  base_astnode.hpp  context.hpp  parser.cpp  parser.hpp  tokenizator.cpp  tokenizator.hpp
simple_C_parser/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/libparser/: ast.cpp  astnodes.cpp  base_astnode.cpp  context.cpp  parser.cpp  tokenizator.cpp
tests/: CMakeLists.txt
tests/libparser/: context.test.cpp  parser.test.cpp  test.cpp  tokenizator.test.cpp
